--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -20,12 +20,12 @@ build:
 
 requirements:
   host:
-    - python ${{ python_min }}
+    - python ${{ python_min }}.*
     - setuptools >=61.0
     - versioningit
     - pip
   run:
-    - python >=${{ python_min }}
+    - python >=${{ python_min }}.*
     - gufe >=1,<2
     - numpy
     - rdkit
@@ -38,12 +38,12 @@ tests:
   - python:
       imports:
         - konnektor
-      python_version: ${{ python_min }}
+      python_version: ${{ python_min }}.*
       pip_check: false
   - requirements:
       run:
         - pytest
-        - python ${{ python_min }}
+        - python ${{ python_min }}.*
     script:
       - pytest --pyargs konnektor
 
