--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -25,7 +25,7 @@ requirements:
     - versioningit
     - pip
   run:
-    - python >=${{ python_min }}.*
+    - python >=${{ python_min }}
     - gufe >=1,<2
     - numpy
     - rdkit
